[Add] 注文履歴一覧

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,3 +10,8 @@ ja:
         making: "製作中"
         preparing: "発送準備中"
         shipped: "発送済み"
+
+  ja:
+  time:
+    formats:
+      default: "%Y/%m/%d"
